# ChangeLog for media-tv/gnome-dvb-daemon
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Feb 2011; Florian Steinel <fsteinel@gentoo.de.flonet.net>
  gnome-dvb-daemon-0.1.23.ebuild:
  fix vala dependency

  20 Feb 2011; Florian Steinel <fsteinel@gentoo.de.flonet.net>
  gnome-dvb-daemon-0.1.15.ebuild, gnome-dvb-daemon-0.1.16.ebuild,
  gnome-dvb-daemon-0.1.17.ebuild, gnome-dvb-daemon-0.1.18.ebuild,
  gnome-dvb-daemon-0.1.19.ebuild, gnome-dvb-daemon-0.1.20.ebuild,
  gnome-dvb-daemon-0.1.21.ebuild, gnome-dvb-daemon-0.1.22.ebuild,
  gnome-dvb-daemon-0.1.23.ebuild:
  Fix python depency

  20 Feb 2011; Florian Steinel <fsteinel@gentoo.de.flonet.net>
  gnome-dvb-daemon-0.1.8.1.ebuild:
  Fix repoman errors v2

  20 Feb 2011; Florian Steinel <fsteinel@gentoo.de.flonet.net>
  gnome-dvb-daemon-0.1.5.ebuild, gnome-dvb-daemon-0.1.6.ebuild,
  gnome-dvb-daemon-0.1.7.ebuild:
  Fix repoman errors

*gnome-dvb-daemon-0.1.23 (20 Feb 2011)

  20 Feb 2011; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gnome-dvb-daemon-0.1.23.ebuild:
  Version bump.

*gnome-dvb-daemon-0.1.22 (20 Feb 2011)

  20 Feb 2011; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gnome-dvb-daemon-0.1.22.ebuild:
  Version bump.
 
  20 Feb 2011; Florian Steinel <fsteinel@gentoo.de.flonet.net>
  gnome-dvb-daemon-0.1.14.ebuild:
  Fix python.eclass usage

*gnome-dvb-daemon-0.1.17 (14 Apr 2010)

  14 Apr 2010; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gnome-dvb-daemon-0.1.17.ebuild:
  Version bump.

*gnome-dvb-daemon-0.1.16 (18 Mrz 2010)

  18 Mrz 2010; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gnome-dvb-daemon-0.1.16.ebuild:
  Version bump.

*gnome-dvb-daemon-0.1.15 (23 Feb 2010)

  23 Feb 2010; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gnome-dvb-daemon-0.1.15.ebuild:
  Version bump.

*gnome-dvb-daemon-0.1.14 (24 Dec 2009)

  24 Dec 2009; Florian Steinel <fsteinel@gentoo.de.flonet.net> +gnome-dvb-daemon-0.1.14.ebuild:
  Version bump.
